--- a/views/add_command.html
+++ b/views/add_command.html
@@ -20,7 +20,7 @@
 </head>
 <body>
 
-<nav class="navbar navbar-default">
+<nav class="navbar navbar-default navbar-fixed-top">
     <div class="container-fluid">
         <!-- Brand and toggle get grouped for better mobile display -->
         <div class="navbar-header">
@@ -37,13 +37,12 @@
         <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
             <ul class="nav navbar-nav">
                 <li class="active"><a href="/command/add">add command <span class="sr-only">(current)</span></a></li>
-                <li><a href="/command/list">command list</a></li>
                 <li><a href="/command/history">history</a></li>
             </ul>
         </div><!-- /.navbar-collapse -->
     </div><!-- /.container-fluid -->
 </nav>
-
+<div style="width:10px;height:70px"></div>
 <div class="container-fluid">
     <div class="container">
         <div class="row">
